[project]
name = "rlqueuehandler"
version = "0.1.0"
description = "RL project using a custom Gymnasium environment and PPO."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "matplotlib",
    "numpy",
    "stable-baselines3",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false
